--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "mapbox-gl": "^2.8.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.7.0",
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
     "eslint": "7.32.0",
